<resources>
    <string name="app_name" translatable="false">SingiAttend</string>
    <string name="title_main">SingiAttend - Student Attendance</string>
    <string name="title_reg">SingiAttend - Student Registration</string>
    <string name="br_indexa">Index number:</string>
    <string name="password">Password:</string>
    <string name="register">Registration</string>
    <string name="copyright" translatable="false">© Марко Дојкић 2020-2025</string>
    <string name="name_surname">Name and Surname:</string>
    <string name="singimail">Student\'s e-mail address:</string>
    <string name="confirmreg">Register</string>
    <string name="login">Login</string>
    <string name="hint_index" translatable="false">2023/123456</string>
    <string name="hint_indexREG" translatable="false">123456</string>
    <string name="hint_pass" translatable="false">************</string>
    <string name="hint_namesurname">John Doe</string>
    <string name="hint_singimail">john.doe.23@singimail.rs</string>
    <string name="course">Choose faculty and course</string>
    <string name="cancel">Cancel</string>
    <string name="regTitleSuccess">Registration success</string>
    <string name="regMessageSuccess">You have successfully registered. You can now login with your\'re credentials.</string>
    <string name="loginTitleSuccess">Login successful</string>
    <string name="regTitleFailed">Registration failed</string>
    <string name="regMessageFailed">Registration data values are rejected, student with same index may already be registered.\nCheck data and try again.</string>
    <string name="regMessageServerError">Could not contact server, it isn\'t active. Please check with your professor/assistant and try again</string>
    <string name="loginTitleFailed">Login failed.</string>
    <string name="loginMessageFailed">Check your index number and password</string>
    <string name="loginMessageUnknown">There is no student registered with the index number entered</string>
    <string name="ok">Fine</string>
    <string name="logout">Logout</string>
    <string name="confirmLogout">Logout confirmation</string>
    <string name="wannaLogout">Are you sure you want to logout?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string-array name="faculties_eng">
        <item>Faculty of Business in Belgrade</item>
        <item>Faculty of Tourism and Hospitality Management</item>
        <item>Faculty of Informatics and Computing</item>
        <item>Faculty of Technical Sciences</item>
        <item>SINGIDUNUM UNIVERSITY</item>
    </string-array>
    <string-array name="faculties_srb">
        <item>Faculty of Business in Belgrade</item>
        <item>Faculty of Tourism and Hospitality Management</item>
        <item>Faculty of Informatics and Computing</item>
        <item>Faculty of Technical Sciences</item>
        <item>Faculty of Physical Education and Sports Management</item>
        <item>SINGIDUNUM UNIVERSITY</item>
    </string-array>
    <string-array name="courses_f1_eng">
        <item>Business Economics - ENGLISH LANGUAGE</item>
        <item>Anglistics - ENGLISH LANGUAGE</item>
    </string-array>
    <string-array name="courses_f2_eng">
        <item>Tourism, Hospitality and Food Economics - ENGLISH LANGUAGE</item>
    </string-array>
    <string-array name="courses_f3_eng">
        <item>Information Technology - ENGLISH LANGUAGE</item>
    </string-array>
    <string-array name="courses_f4_eng">
        <item>Software and Data Engineering - ENGLISH LANGUAGE</item>
    </string-array>
    <string-array name="courses_f5_eng">
        <item>Environment and Sustainable Development - ENGLISH LANGUAGE</item>
    </string-array>
    <string-array name="courses_f1_srb">
        <item>Business Economics</item>
        <item>Anglistics</item>
    </string-array>
    <string-array name="courses_f2_srb">
        <item>Tourism, Hospitality and Food Economics</item>
    </string-array>
    <string-array name="courses_f3_srb">
        <item>Computer science</item>
        <item>Information Technology</item>
    </string-array>
    <string-array name="courses_f4_srb">
        <item>Software and Data Engineering</item>
    </string-array>
    <string-array name="courses_f5_srb">
        <item>Physical education and sports</item>
        <item>Management in sports</item>
    </string-array>
    <string-array name="courses_f6_srb">
        <item>Environment and Sustainable Development</item>
        <item>Pharmacy</item>
    </string-array>
    <string name="recordAttendanceFailed">Error occurred</string>
    <string name="recordAttendanceClientError">Please check your internet connection</string>
    <string name="recordAttendanceServerError">Could not contact server\nPlease check with your professor/assistant and try again</string>
    <string name="alreadyRecordedAttendance">Attendance already recorded</string>
    <string name="newlyRecordedAttendance">Attendance successfully recorded</string>
    <string name="recordAttendanceUnknownError">Attendance recording file not found on server\nCheck with your professor/assistant</string>
    <string name="serverInactive">Server not active</string>
    <string name="descAL">Attended lectures</string>
    <string name="descTL">Total lectures</string>
    <string name="descAP">Attended practices</string>
    <string name="descTP">Total practices</string>
    <string name="rememberCredentials">"Save credentials to memory"</string>
    <string name="titleCredentialsNotSaved">"Failed to save credentials"</string>
    <string name="messageCredentialsNotSaved">"An error occurred while saving student login credentials"</string>
    <string name="titleCredentialsSaved">"Credentials saved successfully"</string>
    <string name="messageCredentialsSaved">"Entered login credentials have been successfully saved"</string>
    <string name="saveForBiometricsAuthentication">"Use this account for\nlogin using\nbiometrics authentication"</string>
    <string name="loginUsingBiometricsAuthentication">"Login using Biometrics, PIN, pattern or password"</string>
    <string name="biometricsLoginReason">"Logging in of a student whose index number is \"%s\" using biometric authentication"</string>
    <string name="biometricsNoAccountMessage">"You haven't associated any login credentials with biometric authentication"</string>
    <string name="biometricsKeychainReadFailed">"Error occurred while reading saved student password"</string>
    <string name="biometricsAuthenticationFailed">"Biometrics authentication failed, try again"</string>
    <string name="biometricsNotAvailable">"Biometrics authentication is not available on this device\nBiometrics, PIN, pattern nor password are available"</string>
    <string name="biometricsNotEnrolled">"Biometrics authentication is not set on this device\nPlease setup either Biometrics, PIN, pattern or password"</string>
    <string name="biometricsLockout">"Use of Fingerprint or Face authentication is locked on this device"</string>
    <string name="biometricsGenericError">"Unknown error with use of Fingerprint or Face authentication occurred\nPlease check your biometrics configuration"</string>
    <string name="forecastAttendancePoints">"Forecast of possible obtained points for attending classes: %.0f/10"</string>
    <string name="classOver">"THE SCHOOL YEAR IS OVER"</string>
    <string name="loginFacultyPlace">Choose the place where you study</string>
    <string name="loginFacultyBG">Belgrade</string>
    <string name="loginFacultyNIS">Niš</string>
    <string name="loginFacultyNS">Novi Sad</string>
    <string name="facultyPlaceNotSelected">You haven\'t chosen place where you\'re studying</string>
    <string name="teacherIsAssistant">Professor is also responsible for exercises</string>
</resources>
