<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FF9800"
    android:forceDarkAllowed="true"
    android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/index_text"
        android:layout_width="114dp"
        android:layout_height="29dp"
        android:layout_marginStart="45dp"
        android:layout_marginTop="168dp"
        android:layout_marginEnd="254dp"
        android:layout_marginBottom="431dp"
        android:autoSizeTextType="uniform"
        android:text="@string/br_indexa"
        android:textColor="#283735"
        android:textSize="18sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Switch
        android:id="@+id/save_for_biometrics_switch"
        android:layout_width="129dp"
        android:layout_height="48dp"
        android:layout_marginStart="223dp"
        android:layout_marginTop="426dp"
        android:layout_marginEnd="61dp"
        android:layout_marginBottom="154dp"
        android:autoSizeTextType="uniform"
        android:text="@string/saveForBiometricsAuthentication"
        android:textSize="2sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/index_txt"
        android:layout_width="307dp"
        android:layout_height="44dp"
        android:layout_marginStart="45dp"
        android:layout_marginTop="197dp"
        android:layout_marginEnd="61dp"
        android:layout_marginBottom="387dp"
        android:autoSizeTextType="uniform"
        android:ems="10"
        android:hint="@string/hint_index"
        android:importantForAutofill="no"
        android:inputType="none|textNoSuggestions"
        android:minHeight="48dp"
        android:textColor="#302F2F"
        android:textColorHint="#838080"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

    <Button
        android:id="@+id/login_btn"
        android:layout_width="141dp"
        android:layout_height="48dp"
        android:layout_marginStart="45dp"
        android:layout_marginTop="362dp"
        android:layout_marginEnd="227dp"
        android:layout_marginBottom="218dp"
        android:autoSizeTextType="uniform"
        android:onClick="onLogin"
        android:text="@string/login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/login_with_biometrics_btn"
        android:layout_width="163dp"
        android:layout_height="48dp"
        android:layout_marginStart="45dp"
        android:layout_marginTop="426dp"
        android:layout_marginEnd="205dp"
        android:layout_marginBottom="154dp"
        android:autoSizeTextType="uniform"
        android:onClick="onLoginWithBiometrics"
        android:text="@string/loginUsingBiometricsAuthentication"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/register_btn"
        android:layout_width="146dp"
        android:layout_height="48dp"
        android:layout_marginStart="216dp"
        android:layout_marginTop="362dp"
        android:layout_marginEnd="51dp"
        android:layout_marginBottom="218dp"
        android:autoSizeTextType="uniform"
        android:onClick="onRegistracija"
        android:text="@string/register"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/pass_txt"
        android:layout_width="307dp"
        android:layout_height="44dp"
        android:layout_marginStart="45dp"
        android:layout_marginTop="297dp"
        android:layout_marginEnd="61dp"
        android:layout_marginBottom="287dp"
        android:autoSizeTextType="uniform"
        android:ems="10"
        android:hint="@string/hint_pass"
        android:importantForAutofill="no"
        android:inputType="none|textPassword"
        android:minHeight="48dp"
        android:textColor="#302F2F"
        android:textColorHint="#838080"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

    <TextView
        android:id="@+id/pass_text"
        android:layout_width="83dp"
        android:layout_height="27dp"
        android:layout_marginStart="45dp"
        android:layout_marginTop="270dp"
        android:layout_marginEnd="285dp"
        android:layout_marginBottom="331dp"
        android:autoSizeTextType="uniform"
        android:text="@string/password"
        android:textColor="#283735"
        android:textSize="18sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>