<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:forceDarkAllowed="true"
    android:textAlignment="center"
    android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
    tools:context=".RegisterActivity">

    <Button
        android:id="@+id/registerSubmit_btn"
        android:layout_width="141dp"
        android:layout_height="48dp"
        android:onClick="onRegister"
        android:text="@string/confirmreg"
        android:textColor="@color/title_color_dark"
        app:layout_constraintBottom_toTopOf="@+id/footer_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/course_spin" />

    <EditText
        android:id="@+id/nameSurnameREG_txt"
        android:layout_width="315dp"
        android:layout_height="38dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="47dp"
        android:ems="10"
        android:hint="@string/hint_namesurname"
        android:importantForAutofill="no"
        android:inputType="text"
        android:singleLine="true"
        android:textAllCaps="true"
        android:textColor="@color/title_color_dark"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameSurnameREG_text"
        tools:ignore="TouchTargetSizeCheck,TextContrastCheck,TextContrastCheck"
        tools:layout_editor_absoluteY="109dp" />

    <EditText
        android:id="@+id/indexREG_txt"
        android:layout_width="156dp"
        android:layout_height="49dp"
        android:layout_marginEnd="43dp"
        android:ems="10"
        android:hint="@string/hint_indexREG"
        android:importantForAutofill="no"
        android:inputType="text"
        android:singleLine="true"
        android:textAllCaps="true"
        android:textColor="@color/title_color_dark"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/singiMailREG_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/indexSlash_text"
        app:layout_constraintTop_toBottomOf="@+id/indexREG_text"
        tools:ignore="NotSibling,TextContrastCheck,TextContrastCheck" />

    <Spinner
        android:id="@+id/indexYear_spin"
        android:layout_width="139dp"
        android:layout_height="48dp"
        android:layout_marginStart="50dp"
        android:forceDarkAllowed="true"
        android:gravity="center"
        android:spinnerMode="dropdown"
        android:textAlignment="center"
        android:theme="@style/AppTheme"
        app:layout_constraintBottom_toTopOf="@+id/singiMailREG_text"
        app:layout_constraintEnd_toStartOf="@+id/indexSlash_text"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/indexREG_text"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/indexSlash_text"
        android:layout_width="15dp"
        android:layout_height="48dp"
        android:layout_marginTop="7dp"
        android:text="/"
        android:textColor="@color/title_color_dark"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/singiMailREG_text"
        app:layout_constraintEnd_toStartOf="@+id/indexREG_txt"
        app:layout_constraintStart_toEndOf="@+id/indexYear_spin"
        app:layout_constraintTop_toBottomOf="@+id/indexREG_text" />

    <TextView
        android:id="@+id/indexREG_text"
        android:layout_width="315dp"
        android:layout_height="25dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="35dp"
        android:text="@string/br_indexa"
        android:textColor="@color/title_color_dark"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/indexREG_txt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameSurnameREG_txt"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/singiMailREG_txt"
        android:layout_width="315dp"
        android:layout_height="38dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="47dp"
        android:ems="10"
        android:hint="@string/hint_singimail"
        android:importantForAutofill="no"
        android:inputType="text"
        android:maxLength="60"
        android:singleLine="true"
        android:textAllCaps="true"
        android:textColor="@color/title_color_dark"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/singiMailREG_text"
        tools:ignore="TextContrastCheck,TextContrastCheck" />

    <EditText
        android:id="@+id/passREG_txt"
        android:layout_width="315dp"
        android:layout_height="38dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="47dp"
        android:ems="10"
        android:hint="@string/hint_pass"
        android:importantForAutofill="no"
        android:inputType="text|textPassword"
        android:singleLine="true"
        android:textAllCaps="true"
        android:textColor="@color/title_color_dark"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passREG_text"
        tools:ignore="TextContrastCheck,TextContrastCheck" />

    <ImageButton
        android:id="@+id/serbian_course_btn"
        android:layout_width="120dp"
        android:layout_height="85dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="15dp"
        android:background="@android:color/tertiary_text_light"
        android:contentDescription="@string/app_name"
        android:onClick="serbianCourses"
        android:padding="5dp"
        android:scaleType="matrix"
        app:layout_constraintBottom_toTopOf="@+id/faculty_spin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.057"
        app:layout_constraintStart_toEndOf="@+id/english_course_btn"
        app:layout_constraintTop_toBottomOf="@+id/courseREG_text"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/serbian_rs"
        tools:src="@drawable/serbian_rs"
        tools:srcCompat="@drawable/serbian_rs" />

    <ImageButton
        android:id="@+id/english_course_btn"
        android:layout_width="120dp"
        android:layout_height="85dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="15dp"
        android:background="@android:color/tertiary_text_light"
        android:contentDescription="@string/app_name"
        android:onClick="englishCourses"
        android:padding="5dp"
        android:scaleType="matrix"
        app:layout_constraintBottom_toTopOf="@+id/faculty_spin"
        app:layout_constraintEnd_toStartOf="@+id/serbian_course_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/courseREG_text"
        app:srcCompat="@drawable/english_us"
        tools:ignore="DuplicateSpeakableTextCheck,DuplicateSpeakableTextCheck"
        tools:src="@drawable/english_us"
        tools:srcCompat="@drawable/english_us" />

    <Spinner
        android:id="@+id/faculty_spin"
        android:layout_width="340dp"
        android:layout_height="40dp"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="40dp"
        android:gravity="center"
        android:textColor="#FFFFFF"
        android:theme="@style/AppTheme"
        app:layout_constraintBottom_toTopOf="@+id/course_spin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/serbian_course_btn"
        tools:ignore="SpeakableTextPresentCheck"
        tools:layout_editor_absoluteX="45dp"
        tools:layout_editor_absoluteY="515dp" />

    <Spinner
        android:id="@+id/course_spin"
        android:layout_width="340dp"
        android:layout_height="55dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="40dp"
        android:gravity="center"
        android:textColor="#FFFFFF"
        android:theme="@style/AppTheme"
        app:layout_constraintBottom_toTopOf="@+id/registerSubmit_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/faculty_spin"
        tools:ignore="SpeakableTextPresentCheck"
        tools:layout_editor_absoluteX="45dp"
        tools:layout_editor_absoluteY="515dp" />

    <TextView
        android:id="@+id/title_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="49dp"
        android:layout_marginTop="60dp"
        android:layout_marginBottom="-15dp"
        android:layout_marginEnd="50dp"
        android:gravity="center"
        android:text="@string/title_reg"
        android:textColor="@color/title_color_dark"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/nameSurnameREG_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/nameSurnameREG_text"
        android:layout_width="315dp"
        android:layout_height="25dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="35dp"
        android:text="@string/name_surname"
        android:textColor="@color/title_color_dark"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/nameSurnameREG_txt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_text" />

    <TextView
        android:id="@+id/singiMailREG_text"
        android:layout_width="315dp"
        android:layout_height="25dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="35dp"
        android:text="@string/singimail"
        android:textColor="@color/title_color_dark"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/singiMailREG_txt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/indexREG_text"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/passREG_text"
        android:layout_width="315dp"
        android:layout_height="25dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="35dp"
        android:text="@string/password"
        android:textColor="@color/title_color_dark"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/passREG_txt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/singiMailREG_txt"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/courseREG_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="101dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="101dp"
        android:text="@string/course"
        android:textColor="@color/title_color_dark"
        android:textSize="18sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toTopOf="@+id/english_course_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passREG_txt"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/footer_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="106dp"
        android:layout_marginEnd="106dp"
        android:layout_marginBottom="25dp"
        android:layout_marginTop="5dp"
        android:text="@string/copyright"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerSubmit_btn" />

</androidx.constraintlayout.widget.ConstraintLayout>