<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:forceDarkAllowed="true"
    android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
    tools:context=".MainActivity">

    <FrameLayout
        android:id="@+id/disabledGrayOut"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/main_disabled_stroke_color"
        tools:layout_editor_absoluteX="30dp"
        tools:layout_editor_absoluteY="396dp">

    </FrameLayout>

    <ScrollView
        android:id="@+id/sv"
        android:layout_width="347dp"
        android:layout_height="255dp"
        android:layout_marginStart="33dp"
        android:layout_marginTop="131dp"
        android:layout_marginEnd="33dp"
        android:layout_marginBottom="349dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck">

        <LinearLayout
            android:id="@+id/sv_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />
    </ScrollView>

    <LinearLayout
        android:id="@+id/hv_container"
        android:layout_width="349dp"
        android:layout_height="289dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="396dp"
        android:layout_marginEnd="29dp"
        android:layout_marginBottom="70dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </LinearLayout>

    <TextView
        android:id="@+id/title_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="691dp"
        android:text="@string/title_main"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck,TextContrastCheck,TextContrastCheck" />

    <TextView
        android:id="@+id/footer_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="58dp"
        android:layout_marginTop="674dp"
        android:layout_marginEnd="58dp"
        android:layout_marginBottom="28dp"
        android:text="@string/copyright"
        android:textAllCaps="false"
        android:textSize="16sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck,TextContrastCheck" />

    <TextView
        android:id="@+id/loggedInAs_text"
        android:layout_width="193dp"
        android:layout_height="53dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="59dp"
        android:layout_marginEnd="186dp"
        android:layout_marginBottom="619dp"
        android:gravity="center|center_horizontal|center_vertical"
        android:textAlignment="center"
        android:textColor="#B60606"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/serverInactive_text"
        android:layout_width="126dp"
        android:layout_height="20dp"
        android:layout_marginStart="235dp"
        android:layout_marginTop="107dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="604dp"
        android:textAlignment="center"
        android:textColor="@android:color/holo_red_light"
        android:textSize="12sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/login_btn"
        android:layout_width="117dp"
        android:layout_height="48dp"
        android:layout_marginStart="241dp"
        android:layout_marginTop="59dp"
        android:layout_marginEnd="53dp"
        android:layout_marginBottom="634dp"
        android:onClick="onLogout"
        android:text="@string/logout"
        android:textColor="@android:color/holo_red_light"
        android:textSize="13sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck,TextContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>